--- a/_make_pdf.tex
+++ b/_make_pdf.tex
@@ -140,21 +140,27 @@
 
 
 %%% --- Adjust Font ---
-\renewcommand{\normalsize}{\fontsize{12pt}{14pt}\selectfont}
+\renewcommand{\normalsize}{\fontsize{10pt}{13pt}\selectfont}
 \makeatletter
 \renewcommand\normalsize{%
   \@setfontsize\normalsize{12pt}{15pt}% 12pt Schrift und 15pt Zeilenabstand
-  \abovedisplayskip 11pt plus 3pt minus 7pt%
-  \abovedisplayshortskip \z@ plus 3pt%
-  \belowdisplayshortskip 8pt plus 3pt minus 4pt%
+  \abovedisplayskip 10pt plus 2pt minus 5pt%
+  \abovedisplayshortskip \z@ plus 2pt%
+  \belowdisplayshortskip 6pt plus 2pt minus 3pt%
   \belowdisplayskip \abovedisplayskip
   \let\@listi\@listI%
 }
 \makeatother
 \normalsize
 
+\makeatletter
+\renewcommand\small{\@setfontsize\small{9pt}{11pt}}
+\renewcommand\footnotesize{\@setfontsize\footnotesize{8pt}{10pt}}
+\makeatother
+
+
 % Increase space between lines
-\setstretch{1.5}
+\setstretch{1.2}
 
 % Remove spacing after lists
 \setlist{nosep}
@@ -180,8 +186,21 @@
 \setlength{\marginparwidth}{2cm}
 
 
+\newsavebox{\margibox}
+\newcommand{\margicontent}{}
+
 \renewcommand{\marginnote}[1]{%
-  \oldmarginnote{{\footnotesize\selectfont #1}}%
+  \sbox{\margibox}{%
+    \vtop{%
+      \hsize=\marginparwidth
+      \footnotesize
+      \linespread{0.8}\selectfont
+      \raggedright
+      #1
+    }%
+  }%
+  \edef\margicontent{\noexpand\usebox{\noexpand\margibox}}%
+  \oldmarginnote[\margicontent]{\margicontent}%
 }
 
 
@@ -226,9 +245,9 @@
     \begin{tikzpicture}[remember picture, overlay]
       \fill[my_orange] ([yshift=-30pt]current page.north west) rectangle ([yshift=-60pt]current page.north east);
       \node[anchor=west, text=white, font=\bfseries, yshift=-45pt, xshift=90pt]
-        at (current page.north west) {\thepage};
-      \node[anchor=east, text=white, font=\bfseries, yshift=-45pt, xshift=-90pt]
-        at (current page.north east) {\leftmark};
+        at (current page.north west) {\phantom{00}};
+      \node[anchor=east, text=white, font=\bfseries, yshift=-45pt, xshift=-80pt]
+        at (current page.north east)  {Creating the World};
     \end{tikzpicture}%
   }
 }
@@ -238,10 +257,10 @@
   \AddToShipoutPictureFG*{%
     \begin{tikzpicture}[remember picture, overlay]
       \fill[my_orange] ([yshift=-30pt]current page.north west) rectangle ([yshift=-60pt]current page.north east);
-      \node[anchor=west, text=white, font=\bfseries, yshift=-45pt, xshift=90pt]
-        at (current page.north west) {\leftmark};
+      \node[anchor=west, text=white, font=\bfseries, yshift=-45pt, xshift=80pt]
+        at (current page.north west) {Creating the World};
       \node[anchor=east, text=white, font=\bfseries, yshift=-45pt, xshift=-90pt]
-        at (current page.north east) {\thepage};
+        at (current page.north east) {\phantom{00}};
     \end{tikzpicture}%
   }
 }
@@ -287,8 +306,8 @@ arc=10pt,
 colframe=green!75!black,
 % Craete gold background color
 colback=green!5!white,
-% Define Font of title (black font, sans-serife and large
-fonttitle=\sffamily\bfseries\Large,
+% Define Font of title (black font, sans-serife and large)
+fonttitle=\sffamily\bfseries\normalsize,
 % Set content 1 as title
 title=#1,
 % Add space before and after the title inside the box
@@ -456,28 +475,34 @@ boxed title style={
     \begin{tikzpicture}[remember picture, overlay]
       \ifodd\value{page}
         % Odd pages - box left
-        \node[anchor=south west] at ([xshift=2.0cm]current page.south west) {%
-          \raisebox{-0.15\baselineskip}{%
-            \colorbox{blue_box}{%
-              \parbox[c][1.25\baselineskip][t]{0.5cm}{%
-                \vspace{0.28\baselineskip}% ← etwa 3mm nach unten
-                \centering\color{white}\bfseries\small\thepage%
+        \node[anchor=south west, font=\normalfont\small, text=black] 
+          at ([xshift=29mm, yshift=0.65cm]current page.south west) {\thechapter.\ \leftmark};
+        \node[anchor=south east] 
+          at ([xshift=-2.0cm]current page.south east) {%
+            \raisebox{-0.15\baselineskip}{%
+              \colorbox{blue_box}{%
+                \parbox[c][1.25\baselineskip][t]{0.5cm}{%
+                  \vspace{0.28\baselineskip}%
+                  \centering\color{white}\bfseries\small\thepage%
+                }%
               }%
             }%
-          }%
-        };
+          };
       \else
         % even pages - box right
-        \node[anchor=south east] at ([xshift=-2.0cm]current page.south east) {%
-          \raisebox{-0.15\baselineskip}{%
-            \colorbox{blue_box}{%
-              \parbox[c][1.25\baselineskip][t]{0.5cm}{%
-                \vspace{0.28\baselineskip}% ← etwa 3mm nach unten
-                \centering\color{white}\bfseries\small\thepage%
+        \node[anchor=south east, font=\normalfont\small, text=black] 
+          at ([xshift=-29mm, yshift=0.65cm]current page.south east) {\thechapter.\ \leftmark};
+        \node[anchor=south west] 
+          at ([xshift=2.0cm]current page.south west) {%
+            \raisebox{-0.15\baselineskip}{%
+              \colorbox{blue_box}{%
+                \parbox[c][1.25\baselineskip][t]{0.5cm}{%
+                  \vspace{0.28\baselineskip}%
+                  \centering\color{white}\bfseries\small\thepage%
+                }%
               }%
             }%
-          }%
-        };
+          };
       \fi
     \end{tikzpicture}%
   }
@@ -606,7 +631,7 @@ boxed title style={
             Michael Rihs\\
             Flurina Brodwolf\\
             Romina Schmid\\
-            Fred Mast\\
+            Fred Mast
           };
       \end{tikzpicture}
     };
