Adjust About Page

--- a/pages/about.qmd
+++ b/pages/about.qmd
@@ -14,14 +14,14 @@ Diese Website stellt eine offene Bildungsressource (Open Education Ressource) da
 
 -   Michael Rihs*
 
--   Flurina L. Brodfwolf
+-   Flurina L. Brodwolf
 
 -   Romina Schmid
 
 -   Fred W. Mast
 
-Abteilung für kognitive Psychologie, Wahrnehmung und Methodenlehre
-Institut für Psychologie
+Abteilung für kognitive Psychologie, Wahrnehmung und Methodenlehre <br>
+Institut für Psychologie <br>
 Universität Bern
 
 ## Danksagung
